@@ -914,6 +914,7 @@ test-xfail-UNIX98/aio.h/conform = yes
 test-xfail-UNIX98/ctype.h/conform = yes
 test-xfail-UNIX98/dirent.h/conform = yes
 test-xfail-UNIX98/errno.h/conform = yes
+test-xfail-UNIX98/fcntl.h/conform = yes
 test-xfail-UNIX98/ftw.h/conform = yes
 test-xfail-UNIX98/grp.h/conform = yes
 test-xfail-UNIX98/monetary.h/conform = yes
@@ -923,6 +924,8 @@ test-xfail-UNIX98/pwd.h/conform = yes
 test-xfail-UNIX98/regex.h/conform = yes
 test-xfail-UNIX98/sched.h/conform = yes
 test-xfail-UNIX98/semaphore.h/conform = yes
+test-xfail-UNIX98/stdio.h/conform = yes
+test-xfail-UNIX98/stdlib.h/conform = yes
 test-xfail-UNIX98/stropts.h/conform = yes
 test-xfail-UNIX98/sys/ipc.h/conform = yes
 test-xfail-UNIX98/sys/mman.h/conform = yes
@@ -933,6 +936,7 @@ test-xfail-UNIX98/sys/shm.h/conform = yes
 test-xfail-UNIX98/sys/socket.h/conform = yes
 test-xfail-UNIX98/sys/stat.h/conform = yes
 test-xfail-UNIX98/sys/statvfs.h/conform = yes
+test-xfail-UNIX98/sys/time.h/conform = yes
 test-xfail-UNIX98/sys/timeb.h/conform = yes
 test-xfail-UNIX98/sys/times.h/conform = yes
 test-xfail-UNIX98/sys/types.h/conform = yes
@@ -940,16 +944,21 @@ test-xfail-UNIX98/sys/uio.h/conform = yes
 test-xfail-UNIX98/sys/un.h/conform = yes
 test-xfail-UNIX98/termios.h/conform = yes
 test-xfail-UNIX98/time.h/conform = yes
+test-xfail-UNIX98/unistd.h/conform = yes
 test-xfail-UNIX98/utime.h/conform = yes
+test-xfail-UNIX98/utmpx.h/conform = yes
 test-xfail-UNIX98/wchar.h/conform = yes
 test-xfail-UNIX98/wctype.h/conform = yes
+test-xfail-XOPEN2K/aio.h/conform = yes
 test-xfail-XOPEN2K/arpa/inet.h/conform = yes
 test-xfail-XOPEN2K/ctype.h/conform = yes
 test-xfail-XOPEN2K/dirent.h/conform = yes
 test-xfail-XOPEN2K/errno.h/conform = yes
+test-xfail-XOPEN2K/fcntl.h/conform = yes
 test-xfail-XOPEN2K/ftw.h/conform = yes
 test-xfail-XOPEN2K/grp.h/conform = yes
 test-xfail-XOPEN2K/monetary.h/conform = yes
+test-xfail-XOPEN2K/mqueue.h/conform = yes
 test-xfail-XOPEN2K/net/if.h/conform = yes
 test-xfail-XOPEN2K/netdb.h/conform = yes
 test-xfail-XOPEN2K/netdb.h/linknamespace = yes
@@ -960,6 +969,7 @@ test-xfail-XOPEN2K/pwd.h/conform = yes
 test-xfail-XOPEN2K/regex.h/conform = yes
 test-xfail-XOPEN2K/sched.h/conform = yes
 test-xfail-XOPEN2K/spawn.h/conform = yes
+test-xfail-XOPEN2K/stdio.h/conform = yes
 test-xfail-XOPEN2K/stdlib.h/conform = yes
 test-xfail-XOPEN2K/stropts.h/conform = yes
 test-xfail-XOPEN2K/sys/ipc.h/conform = yes
@@ -978,6 +988,7 @@ test-xfail-XOPEN2K/sys/times.h/conform = yes
 test-xfail-XOPEN2K/sys/types.h/conform = yes
 test-xfail-XOPEN2K/sys/uio.h/conform = yes
 test-xfail-XOPEN2K/sys/un.h/conform = yes
+test-xfail-XOPEN2K/termios.h/conform = yes
 test-xfail-XOPEN2K/time.h/conform = yes
 test-xfail-XOPEN2K/unistd.h/conform = yes
 test-xfail-XOPEN2K/utime.h/conform = yes
@@ -1005,6 +1016,7 @@ test-xfail-XOPEN2K8/regex.h/conform = yes
 test-xfail-XOPEN2K8/sched.h/conform = yes
 test-xfail-XOPEN2K8/semaphore.h/conform = yes
 test-xfail-XOPEN2K8/spawn.h/conform = yes
+test-xfail-XOPEN2K8/stdio.h/conform = yes
 test-xfail-XOPEN2K8/stdlib.h/conform = yes
 test-xfail-XOPEN2K8/stropts.h/conform = yes
 test-xfail-XOPEN2K8/sys/ipc.h/conform = yes
@@ -1022,6 +1034,7 @@ test-xfail-XOPEN2K8/sys/times.h/conform = yes
 test-xfail-XOPEN2K8/sys/types.h/conform = yes
 test-xfail-XOPEN2K8/sys/uio.h/conform = yes
 test-xfail-XOPEN2K8/sys/un.h/conform = yes
+test-xfail-XOPEN2K8/termios.h/conform = yes
 test-xfail-XOPEN2K8/time.h/conform = yes
 test-xfail-XOPEN2K8/unistd.h/conform = yes
 test-xfail-XOPEN2K8/utime.h/conform = yes
@@ -1031,23 +1044,35 @@ test-xfail-XOPEN2K8/wctype.h/conform = yes
 test-xfail-XPG3/ctype.h/conform = yes
 test-xfail-XPG3/dirent.h/conform = yes
 test-xfail-XPG3/errno.h/conform = yes
+test-xfail-XPG3/fcntl.h/conform = yes
+test-xfail-XPG3/ftw.h/conform = yes
 test-xfail-XPG3/grp.h/conform = yes
 test-xfail-XPG3/monetary.h/conform = yes
+test-xfail-XPG3/pwd.h/conform = yes
 test-xfail-XPG3/regex.h/conform = yes
+test-xfail-XPG3/stdio.h/conform = yes
 test-xfail-XPG3/sys/ipc.h/conform = yes
 test-xfail-XPG3/sys/msg.h/conform = yes
 test-xfail-XPG3/sys/sem.h/conform = yes
 test-xfail-XPG3/sys/shm.h/conform = yes
+test-xfail-XPG3/sys/stat.h/conform = yes
 test-xfail-XPG3/sys/times.h/conform = yes
+test-xfail-XPG3/sys/types.h/conform = yes
+test-xfail-XPG3/termios.h/conform = yes
+test-xfail-XPG3/time.h/conform = yes
+test-xfail-XPG3/unistd.h/conform = yes
 test-xfail-XPG3/utime.h/conform = yes
 test-xfail-XPG4/ctype.h/conform = yes
 test-xfail-XPG4/dirent.h/conform = yes
 test-xfail-XPG4/errno.h/conform = yes
+test-xfail-XPG4/fcntl.h/conform = yes
 test-xfail-XPG4/ftw.h/conform = yes
 test-xfail-XPG4/grp.h/conform = yes
 test-xfail-XPG4/monetary.h/conform = yes
 test-xfail-XPG4/pwd.h/conform = yes
 test-xfail-XPG4/regex.h/conform = yes
+test-xfail-XPG4/stdio.h/conform = yes
+test-xfail-XPG4/stdlib.h/conform = yes
 test-xfail-XPG4/stropts.h/conform = yes
 test-xfail-XPG4/sys/ipc.h/conform = yes
 test-xfail-XPG4/sys/mman.h/conform = yes
@@ -1056,13 +1081,19 @@ test-xfail-XPG4/sys/resource.h/conform = yes
 test-xfail-XPG4/sys/sem.h/conform = yes
 test-xfail-XPG4/sys/shm.h/conform = yes
 test-xfail-XPG4/sys/socket.h/conform = yes
+test-xfail-XPG4/sys/stat.h/conform = yes
 test-xfail-XPG4/sys/statvfs.h/conform = yes
+test-xfail-XPG4/sys/time.h/conform = yes
 test-xfail-XPG4/sys/timeb.h/conform = yes
 test-xfail-XPG4/sys/times.h/conform = yes
+test-xfail-XPG4/sys/types.h/conform = yes
 test-xfail-XPG4/sys/uio.h/conform = yes
 test-xfail-XPG4/sys/un.h/conform = yes
+test-xfail-XPG4/termios.h/conform = yes
 test-xfail-XPG4/time.h/conform = yes
+test-xfail-XPG4/unistd.h/conform = yes
 test-xfail-XPG4/utime.h/conform = yes
+test-xfail-XPG4/utmpx.h/conform = yes
 
 # will expectedly SIGSEGV on kfreebsd 10.0 and later, due to having
 # nxstack=1 by default (bug #762404)
@@ -1090,6 +1121,7 @@ test-xfail-tst-longjmp_chk = yes
 test-xfail-tst-renameat = yes
 test-xfail-tst-setcontext2 = yes
 test-xfail-tst-shm = yes
+test-xfail-tst-spawn2 = yes
 test-xfail-tst-waitid = yes
 test-xfail-tst-writev = yes
 endif
@@ -1114,6 +1146,7 @@ test-xfail-tst-longjmp_chk = yes
 test-xfail-tst-renameat = yes
 test-xfail-tst-setcontext2 = yes
 test-xfail-tst-shm = yes
+test-xfail-tst-spawn2 = yes
 test-xfail-tst-waitid = yes
 endif
 
