@@ -16,6 +16,8 @@ glibc (2.23.90+20160507.87523e9-2) UNRELEASED; urgency=medium
     fail now that we do not have Loongson 2 buildds anymore.
   * debian/patches/kfreebsd/local-sysdeps.diff, local-fbtl.diff:
     update to revision 6083 (from glibc-bsd).
+  * debian/testsuite-xfail-debian.mk: allow more failures on kfreebsd-*,
+    mostly due to the fsid_t type, and which are not regressions.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 Jul 2016 20:50:17 +0200
 
